--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 									<a href="about-us.html" class="sf-with-ul-pre">Services</a>
                                     <ul class="sub-menu">
 										<li class="menu-item menu-item-has-children">
-                                        <a href="Services.html" class="sf-with-ul-pre">Legal</a>
+                                        <a href="#" class="sf-with-ul-pre">Legal</a>
 										<ul class="sub-menu">
-                                        <li class="menu-item"><a href="legalService.html">letigation</a></li>
-										<li class="menu-item"><a href="legalService.html">Non-letigation</a></li>											
+                                        <li class="menu-item"><a href="legalService.html#litigationId">letigation</a></li>
+										<li class="menu-item"><a href="legalService.html#nonlitigationId">Non-letigation</a></li>											
 								    </ul>
 									<li class="menu-item menu-item-has-children">
                                         <a href="Services.html" class="sf-with-ul-pre">Alight services</a>
