--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										<li class="menu-item"><a href="legalService.html#nonlitigationId">Non-letigation</a></li>											
 								    </ul>
 									<li class="menu-item menu-item-has-children">
-                                        <a href="Services.html" class="sf-with-ul-pre">Alight services</a>
+                                        <a href="alightservices.html" class="sf-with-ul-pre">Alight services</a>
 										<li class="menu-item menu-item-has-children">
                                         <a href="Dematerialisation.html" class="sf-with-ul-pre">Dematelaise</a>
 									</ul>
@@ -182,7 +182,7 @@
 										<li class="menu-item"><a href="legalService.html#nonlitigationId">Non-letigation</a></li>											
 								    </ul>
 									<li class="menu-item menu-item-has-children">
-                                        <a href="Services.html" class="sf-with-ul-pre">Alight services</a>
+                                        <a href="alightservices.html" class="sf-with-ul-pre">Alight services</a>
 										<li class="menu-item menu-item-has-children">
                                         <a href="Dematerialisation.html" class="sf-with-ul-pre">Dematelaise</a>
 									</ul>
